<resources>
    <string name="app_name">hwValidationReg</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_header">вхід / реєстрація</string>
    <string name="phone">Телефон</string>
    <string name="password">Пароль</string>
    <string name="signin">Вхід</string>
    <string name="register">Створити акаунт</string>
    <string name="email">Пошта</string>
    <string name="usercabinet">usercabinet</string>
</resources>
